# BEST_1-ST_HOMEWORK_ML_REALLY

./: .gitignore  Makefile  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2d10b41d7a07db3a___init___py.html  z_2d10b41d7a07db3a_compute_metrics_py.html  z_2d10b41d7a07db3a_train_py.html  z_6f5b0f1a5e07cf5a___init___py.html  z_6f5b0f1a5e07cf5a_hparams_py.html  z_6f5b0f1a5e07cf5a_prepare_data_py.html  z_ef3d0ba67a7f6df2___init___py.html  z_ef3d0ba67a7f6df2_test_basic_py.html  z_ef3d0ba67a7f6df2_test_pipeline_py.html
src/data/: prepare_data.py
src/model/: compute_metrics.py  final_metrics.json  run_id.txt  train.py
src/test/: test_basic.py  test_pipeline.py
